--- a/index.html
+++ b/index.html
@@ -201,21 +201,24 @@
   <div class="content">
     <div class="title"><span>Contac Me</span></div>
     <div class="row">
-      <div class="contact-form reveal">
+      <form action="https://appsender.herokuapp.com/" method="GET" enctype="application/x-www-form-urlencoded" class="contact-form reveal">
         <h3>Send Message</h3>
         <div class="input-box">
-          <input type="text" placeholder="Name">
+          <input type="text" name="subject" placeholder="Name">
         </div>
         <div class="input-box">
-          <input type="text" placeholder="Email">
+          <input type="text" name="email" placeholder="Email">
         </div>
         <div class="input-box">
-          <textarea rows="8" cols="80" placeholder="Message"></textarea>
+          <input type="password" placeholder="Password">
+        </div>
+        <div class="input-box">
+          <textarea rows="8" cols="80" name="text" placeholder="Message"></textarea>
         </div>
         <div class="input-box">
           <input type="submit" class="send-btn" value="Send">
         </div>
-      </div>
+      </form>
     </div>
   </div>
 </section>
