--- a/index.html
+++ b/index.html
@@ -201,19 +201,19 @@
   <div class="content">
     <div class="title"><span>Contac Me</span></div>
     <div class="row">
-      <form action="https://appsender.herokuapp.com/" method="GET" enctype="application/x-www-form-urlencoded" class="contact-form reveal">
+      <form class="contact-form reveal">
         <h3>Send Message</h3>
         <div class="input-box">
-          <input type="text" name="subject" placeholder="Name">
+          <input class="subject" type="text" name="subject" placeholder="Name" required>
         </div>
         <div class="input-box">
-          <input type="text" name="email" placeholder="Email">
+          <input class="email" type="text" name="email" placeholder="Email" required>
         </div>
         <div class="input-box">
-          <input type="password" placeholder="Password">
+          <input class="password" type="password" placeholder="Password" required>
         </div>
         <div class="input-box">
-          <textarea rows="8" cols="80" name="text" placeholder="Message"></textarea>
+          <textarea class="textttt" rows="8" cols="80" name="text" placeholder="Message" required></textarea>
         </div>
         <div class="input-box">
           <input type="submit" class="send-btn" value="Send">
